--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -8,6 +8,10 @@
         <servlet-name>UploadImageServlet</servlet-name>
         <servlet-class>br.senac.sp.servlet.UploadImageServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>DeleteImageServlet</servlet-name>
+        <servlet-class>br.senac.sp.servlet.DeleteImageServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>SaveImageServlet</servlet-name>
         <url-pattern>/SaveImageServlet</url-pattern>
@@ -16,12 +20,16 @@
         <servlet-name>UploadImageServlet</servlet-name>
         <url-pattern>/UploadImageServlet</url-pattern>
     </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>DeleteImageServlet</servlet-name>
+        <url-pattern>/DeleteImageServlet</url-pattern>
+    </servlet-mapping>
     <session-config>
         <session-timeout>
             30
         </session-timeout>
     </session-config>
     <welcome-file-list>
-        <welcome-file>cadastrarImagem.jsp</welcome-file>
+        <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
 </web-app>
