--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -16,6 +16,10 @@
         <servlet-name>Product_Servlet</servlet-name>
         <servlet-class>br.senac.sp.servlet.Product_Servlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>Product_Servlet_Alter</servlet-name>
+        <servlet-class>br.senac.sp.servlet.Product_Servlet_Alter</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>UploadImageServlet</servlet-name>
         <url-pattern>/UploadImageServlet</url-pattern>
@@ -32,12 +36,16 @@
         <servlet-name>Product_Servlet_Save</servlet-name>
         <url-pattern>/Product_Servlet_Save</url-pattern>
     </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Product_Servlet_Alter</servlet-name>
+        <url-pattern>/AlterarProduto</url-pattern>
+    </servlet-mapping>
     <session-config>
         <session-timeout>
             30
         </session-timeout>
     </session-config>
     <welcome-file-list>
-        <welcome-file>listarProdutos.jsp</welcome-file>
+        <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
 </web-app>
