--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -16,6 +16,10 @@
         <servlet-name>Product_Servlet</servlet-name>
         <servlet-class>br.senac.sp.servlet.Product_Servlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>ProductList_Servlet</servlet-name>
+        <servlet-class>br.senac.sp.servlet.ProductList_Servlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>UploadImageServlet</servlet-name>
         <url-pattern>/UploadImageServlet</url-pattern>
@@ -31,6 +35,10 @@
     <servlet-mapping>
         <servlet-name>Product_Servlet_Save</servlet-name>
         <url-pattern>/Product_Servlet_Save</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ProductList_Servlet</servlet-name>
+        <url-pattern>/ProductList_Servlet</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
