--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -16,6 +16,17 @@
         <servlet-name>Product_Servlet</servlet-name>
         <servlet-class>br.senac.sp.servlet.Product_Servlet</servlet-class>
     </servlet>
+    <servlet>
+
+        <servlet-name>ProductList_Servlet</servlet-name>
+        <servlet-class>br.senac.sp.servlet.ProductList_Servlet</servlet-class>
+    </servlet>
+    
+    <servlet>
+        <servlet-name>Product_Servlet_Alter</servlet-name>
+        <servlet-class>br.senac.sp.servlet.Product_Servlet_Alter</servlet-class>
+
+    </servlet>
     <servlet-mapping>
         <servlet-name>UploadImageServlet</servlet-name>
         <url-pattern>/UploadImageServlet</url-pattern>
@@ -32,12 +43,23 @@
         <servlet-name>Product_Servlet_Save</servlet-name>
         <url-pattern>/Product_Servlet_Save</url-pattern>
     </servlet-mapping>
+    <servlet-mapping>
+
+        <servlet-name>ProductList_Servlet</servlet-name>
+        <url-pattern>/ProductList_Servlet</url-pattern>
+
+        <servlet-name>Product_Servlet_Alter</servlet-name>
+        <url-pattern>/AlterarProduto</url-pattern>
+
+    </servlet-mapping>
     <session-config>
         <session-timeout>
             30
         </session-timeout>
     </session-config>
     <welcome-file-list>
+
         <welcome-file>cadastrarImagem.jsp</welcome-file>
+
     </welcome-file-list>
 </web-app>
