--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -17,15 +17,20 @@
         <servlet-class>br.senac.sp.servlet.Product_Servlet</servlet-class>
     </servlet>
     <servlet>
-
         <servlet-name>ProductList_Servlet</servlet-name>
         <servlet-class>br.senac.sp.servlet.ProductList_Servlet</servlet-class>
     </servlet>
-    
     <servlet>
         <servlet-name>Product_Servlet_Alter</servlet-name>
         <servlet-class>br.senac.sp.servlet.Product_Servlet_Alter</servlet-class>
-
+    </servlet>
+    <servlet>
+        <servlet-name>ProductVisualizeServlet</servlet-name>
+        <servlet-class>br.senac.sp.servlet.ProductVisualizeServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>AlterImage</servlet-name>
+        <servlet-class>br.senac.sp.servlet.AlterImage</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>UploadImageServlet</servlet-name>
@@ -44,14 +49,20 @@
         <url-pattern>/Product_Servlet_Save</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
-
         <servlet-name>ProductList_Servlet</servlet-name>
         <url-pattern>/ProductList_Servlet</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>Product_Servlet_Alter</servlet-name>
         <url-pattern>/AlterarProduto</url-pattern>
-
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ProductVisualizeServlet</servlet-name>
+        <url-pattern>/ProductVisualizeServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>AlterImage</servlet-name>
+        <url-pattern>/AlterImage</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
