--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -36,6 +36,10 @@
         <servlet-name>VisualizeProductImageServlet</servlet-name>
         <servlet-class>br.senac.sp.servlet.VisualizeProductImageServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>Pagination_Servlet</servlet-name>
+        <servlet-class>br.senac.sp.servlet.Pagination_Servlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>UploadImageServlet</servlet-name>
         <url-pattern>/UploadImageServlet</url-pattern>
@@ -71,6 +75,10 @@
     <servlet-mapping>
         <servlet-name>VisualizeProductImageServlet</servlet-name>
         <url-pattern>/VisualizeProductImageServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Pagination_Servlet</servlet-name>
+        <url-pattern>/Pagination_Servlet</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
