Paginação, botão editado

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -39,8 +39,8 @@
     <servlet>
         <servlet-name>Pagination_Servlet</servlet-name>
         <servlet-class>br.senac.sp.servlet.Pagination_Servlet</servlet-class>
-      </servlet>  
-      <servlet>
+    </servlet>
+    <servlet>
         <servlet-name>AlterImage</servlet-name>
         <servlet-class>br.senac.sp.servlet.AlterImage</servlet-class>
     </servlet>
@@ -55,6 +55,10 @@
     <servlet>
         <servlet-name>ReplaceProductImageServlet</servlet-name>
         <servlet-class>br.senac.sp.servlet.ReplaceProductImageServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>Pagination_Prev_Servlet</servlet-name>
+        <servlet-class>br.senac.sp.servlet.Pagination_Prev_Servlet</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>UploadImageServlet</servlet-name>
@@ -93,7 +97,6 @@
         <url-pattern>/VisualizeProductImageServlet</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
-
         <servlet-name>Pagination_Servlet</servlet-name>
         <url-pattern>/Pagination_Servlet</url-pattern>
     </servlet-mapping>
@@ -112,12 +115,13 @@
     <servlet-mapping>
         <servlet-name>ReplaceProductImageServlet</servlet-name>
         <url-pattern>/ReplaceProductImageServlet</url-pattern>
-
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>Pagination_Prev_Servlet</servlet-name>
+        <url-pattern>/PagPrevious</url-pattern>
     </servlet-mapping>
     <session-config>
-        <session-timeout>
-            30
-        </session-timeout>
+        <session-timeout>30</session-timeout>
     </session-config>
     <welcome-file-list>
         <welcome-file>index.jsp</welcome-file>
