--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -140,6 +140,6 @@
         <session-timeout>30</session-timeout>
     </session-config>
     <welcome-file-list>
-        <welcome-file>/Home_Servlet</welcome-file>
+        <welcome-file>Home_Servlet</welcome-file>
     </welcome-file-list>
 </web-app>
