--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,5 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
+    <filter>
+        <filter-name>AutorizacaoFilter</filter-name>
+        <filter-class>br.senac.sp.filter.AutorizacaoFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>AutorizacaoFilter</filter-name>
+        <url-pattern>/ProductList_Servlet</url-pattern>
+        <url-pattern>/Product_Servlet</url-pattern>
+    </filter-mapping>
     <servlet>
         <servlet-name>UploadImageServlet</servlet-name>
         <servlet-class>br.senac.sp.servlet.UploadImageServlet</servlet-class>
@@ -61,12 +70,20 @@
         <servlet-class>br.senac.sp.servlet.Pagination_Prev_Servlet</servlet-class>
     </servlet>
     <servlet>
+        <servlet-name>LoginServlet</servlet-name>
+        <servlet-class>br.senac.sp.servlet.LoginServlet</servlet-class>
+    </servlet>
+    <servlet>
         <servlet-name>Home_Servlet</servlet-name>
         <servlet-class>br.senac.sp.servlet.Home_Servlet</servlet-class>
     </servlet>
     <servlet>
         <servlet-name>seeProductDetail</servlet-name>
         <servlet-class>br.senac.sp.servlet.seeProductDetail</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>LogoutServlet</servlet-name>
+        <servlet-class>br.senac.sp.servlet.LogoutServlet</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>UploadImageServlet</servlet-name>
@@ -135,6 +152,14 @@
     <servlet-mapping>
         <servlet-name>seeProductDetail</servlet-name>
         <url-pattern>/seeProductDetail</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>LoginServlet</servlet-name>
+        <url-pattern>/login</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>LogoutServlet</servlet-name>
+        <url-pattern>/LogoutServlet</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>30</session-timeout>
