--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -85,6 +85,26 @@
         <servlet-name>LogoutServlet</servlet-name>
         <servlet-class>br.senac.sp.servlet.LogoutServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>RegisterEmployee_Servlet</servlet-name>
+        <servlet-class>br.senac.sp.servlet.RegisterEmployee_Servlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>AlterEmployee_Servlet</servlet-name>
+        <servlet-class>br.senac.sp.servlet.AlterEmployee_Servlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>AlterEmployeePassword_Servlet</servlet-name>
+        <servlet-class>br.senac.sp.servlet.AlterEmployeePassword_Servlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>ActivateInactivateEmployee_Servlet</servlet-name>
+        <servlet-class>br.senac.sp.servlet.ActivateInactivateEmployee_Servlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>VisualizeEmployee_Servlet</servlet-name>
+        <servlet-class>br.senac.sp.servlet.VisualizeEmployee_Servlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>UploadImageServlet</servlet-name>
         <url-pattern>/UploadImageServlet</url-pattern>
@@ -154,6 +174,24 @@
         <url-pattern>/seeProductDetail</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
+        <servlet-name>RegisterEmployee_Servlet</servlet-name>
+        <url-pattern>/RegisterEmployee_Servlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>AlterEmployee_Servlet</servlet-name>
+        <url-pattern>/AlterEmployee_Servlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>AlterEmployeePassword_Servlet</servlet-name>
+        <url-pattern>/AlterEmployeePassword_Servlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ActivateInactivateEmployee_Servlet</servlet-name>
+        <url-pattern>/ActivateInactivateEmployee_Servlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>VisualizeEmployee_Servlet</servlet-name>
+        <url-pattern>/VisualizeEmployee_Servlet</url-pattern>
         <servlet-name>LoginServlet</servlet-name>
         <url-pattern>/login</url-pattern>
     </servlet-mapping>
@@ -165,6 +203,6 @@
         <session-timeout>30</session-timeout>
     </session-config>
     <welcome-file-list>
-        <welcome-file>Home_Servlet</welcome-file>
+        <welcome-file>/WEB-INF/CadastrarFuncionario.jsp</welcome-file>
     </welcome-file-list>
 </web-app>
