--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -12,7 +12,9 @@
         <url-pattern>/VisualizeProductImageServlet/*</url-pattern>
         <url-pattern>/InactiveReactive/*</url-pattern>
         <url-pattern>/AlterarProduto/*</url-pattern>
-        
+        <url-pattern>/AlterEmployee_Servlet/*</url-pattern>
+        <url-pattern>/AlterEmployeePassword_Servlet/*</url-pattern>
+        <url-pattern>/ActivateInactivateEmployee_Servlet/*</url-pattern>
     </filter-mapping>
     <servlet>
         <servlet-name>UploadImageServlet</servlet-name>
@@ -230,6 +232,6 @@
         <session-timeout>30</session-timeout>
     </session-config>
     <welcome-file-list>
-        <welcome-file>/WEB-INF/CadastrarFuncionario.jsp</welcome-file>
+        <welcome-file>login2.jsp</welcome-file>
     </welcome-file-list>
 </web-app>
