--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -138,6 +138,10 @@
         <servlet-name>ListEmployee_Servlet</servlet-name>
         <servlet-class>br.senac.sp.servlet.ListEmployee_Servlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>SearchEmployee_Servlet</servlet-name>
+        <servlet-class>br.senac.sp.servlet.SearchEmployee_Servlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>UploadImageServlet</servlet-name>
         <url-pattern>/UploadImageServlet</url-pattern>
@@ -225,8 +229,8 @@
     <servlet-mapping>
         <servlet-name>VisualizeEmployee_Servlet</servlet-name>
         <url-pattern>/VisualizeEmployee_Servlet</url-pattern>
-    </servlet-mapping>  
-    <servlet-mapping>  
+    </servlet-mapping>
+    <servlet-mapping>
         <servlet-name>LoginServlet</servlet-name>
         <url-pattern>/login</url-pattern>
     </servlet-mapping>
@@ -237,6 +241,10 @@
     <servlet-mapping>
         <servlet-name>ListEmployee_Servlet</servlet-name>
         <url-pattern>/ListEmployee_Servlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>SearchEmployee_Servlet</servlet-name>
+        <url-pattern>/SearchEmployee_Servlet</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>30</session-timeout>
