--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -158,6 +158,10 @@
         <servlet-name>alterRegister_Costumer</servlet-name>
         <servlet-class>br.senac.sp.servlet.alterRegister_Costumer</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>NovoEnderecoServlet</servlet-name>
+        <servlet-class>br.senac.sp.servlet.Address.NovoEnderecoServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>UploadImageServlet</servlet-name>
         <url-pattern>/UploadImageServlet</url-pattern>
@@ -277,6 +281,10 @@
     <servlet-mapping>
         <servlet-name>alterRegister_Costumer</servlet-name>
         <url-pattern>/alterRegister_Costumer</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>NovoEnderecoServlet</servlet-name>
+        <url-pattern>/salvarEndereco</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>30</session-timeout>
