--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -191,6 +191,10 @@
         <servlet-name>InativateAddress_Servlet</servlet-name>
         <servlet-class>br.senac.sp.servlet.InativateAddress_Servlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>AddDeliveryAddress_Servlet</servlet-name>
+        <servlet-class>br.senac.sp.servlet.AddDeliveryAddress_Servlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>UploadImageServlet</servlet-name>
         <url-pattern>/UploadImageServlet</url-pattern>
@@ -334,6 +338,10 @@
     <servlet-mapping>
         <servlet-name>InativateAddress_Servlet</servlet-name>
         <url-pattern>/InativateAddress_Servlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>AddDeliveryAddress_Servlet</servlet-name>
+        <url-pattern>/AddDeliveryAddress_Servlet</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>30</session-timeout>
