--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -200,6 +200,10 @@
         <servlet-name>Carrinho</servlet-name>
         <servlet-class>br.senac.sp.servlet.Carrinho.Carrinho</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>AdicionarDadosCarrinho</servlet-name>
+        <servlet-class>br.senac.sp.servlet.Carrinho.AdicionarDadosCarrinho</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>UploadImageServlet</servlet-name>
         <url-pattern>/UploadImageServlet</url-pattern>
@@ -351,6 +355,10 @@
     <servlet-mapping>
         <servlet-name>Carrinho</servlet-name>
         <url-pattern>/carrinho</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>AdicionarDadosCarrinho</servlet-name>
+        <url-pattern>/AdicionarDadosCarrinho</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>30</session-timeout>
