--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -223,6 +223,8 @@
     <servlet>
         <servlet-name>CadastrarEnderecoParaEntrega</servlet-name>
         <servlet-class>br.senac.sp.servlet.Address.CadastrarEnderecoParaEntrega</servlet-class>
+    </servlet>
+    <servlet>  
         <servlet-name>OrderHistory_Servlet</servlet-name>
         <servlet-class>br.senac.sp.servlet.Orders.OrderHistory_Servlet</servlet-class>
     </servlet>
@@ -413,6 +415,8 @@
     <servlet-mapping>
         <servlet-name>CadastrarEnderecoParaEntrega</servlet-name>
         <url-pattern>/CadastrarEnderecoParaEntrega</url-pattern>
+        </servlet-mapping>
+        <servlet-mapping>
         <servlet-name>OrderHistory_Servlet</servlet-name>
         <url-pattern>/OrderHistory_Servlet</url-pattern>
     </servlet-mapping>
