--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -224,13 +224,17 @@
         <servlet-name>CadastrarEnderecoParaEntrega</servlet-name>
         <servlet-class>br.senac.sp.servlet.Address.CadastrarEnderecoParaEntrega</servlet-class>
     </servlet>
-    <servlet>  
+    <servlet>
         <servlet-name>OrderHistory_Servlet</servlet-name>
         <servlet-class>br.senac.sp.servlet.Orders.OrderHistory_Servlet</servlet-class>
     </servlet>
     <servlet>
         <servlet-name>VerDetalhes_Servlet</servlet-name>
         <servlet-class>br.senac.sp.servlet.Orders.VerDetalhes_Servlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>OrderList_Servlet</servlet-name>
+        <servlet-class>br.senac.sp.servlet.OrderList.OrderList_Servlet</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>UploadImageServlet</servlet-name>
@@ -415,14 +419,18 @@
     <servlet-mapping>
         <servlet-name>CadastrarEnderecoParaEntrega</servlet-name>
         <url-pattern>/CadastrarEnderecoParaEntrega</url-pattern>
-        </servlet-mapping>
-        <servlet-mapping>
+    </servlet-mapping>
+    <servlet-mapping>
         <servlet-name>OrderHistory_Servlet</servlet-name>
         <url-pattern>/OrderHistory_Servlet</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>VerDetalhes_Servlet</servlet-name>
         <url-pattern>/VerDetalhes_Servlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>OrderList_Servlet</servlet-name>
+        <url-pattern>/orderlist</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>60</session-timeout>
